--- a/index_1st.html
+++ b/index_1st.html
@@ -12,7 +12,9 @@
         }
     </style> -->
     <!-- 링크이용 -->
+    <!-- 경로 참고 방식 : "./" - 상대경로 -->
     <link rel="stylesheet" href="./main.css">
+    
 </head>
 <body>
     <!-- 인라인선언 -->
