--- a/tag_ul_li.html
+++ b/tag_ul_li.html
@@ -5,7 +5,7 @@
     <title>GitHub</title>
 </head>
 <body>
-    <header class="header">
+    <header>
         <div class="container">
             <div class="container=left">
                 <!--로고 이미지 -->
