--- a/html_block잡기.html
+++ b/html_block잡기.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>html Contents 예제</title>
-    <link rel="stylesheet" href="./main.css">
+<!--     <link rel="stylesheet" href="css 파일 위치 "> -->
 </head>
 <body>
     <header>
