--- a/figure_tag.html
+++ b/figure_tag.html
@@ -10,7 +10,7 @@
     <!-- img와 text를 연관 시킴 -->
     <!-- 삽화와 그에 대한 설명을 wrapping하는 방식으로 구성 -->
     <figure>
-        <img src="./heropy.png" alt="sample image">
+        <img src="./sample.png" alt="sample image">
         <figcaption>이미지 설명입니다.</figcaption>
     </figure>
 </body>
