--- a/entitis.html
+++ b/entitis.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<!-- 참고자료 https://www.freeformatter.com/html-entities.html-->
+<!-- 참고자료1: https://www.freeformatter.com/html-entities.html-->
+<!-- 참고자료2: https://blog.naver.com/ytj0116/220690489454 -->
 <!-- 위의 Link 참고 -->
 <html lang="ko">
 <head>
